# classmanager2

class-management-main/: DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
class-management-main/backend/: main.py
class-management-main/backend/core/: config.py
class-management-main/backend/data/: database.py  models.py  mongo_connection.py  repository.py
class-management-main/backend/routers/: student_router.py
class-management-main/backend/services/: student_service.py
class-management-main/frontend/: app.py
class-management-main/nginx/: dev.conf
class-management-main/scripts/: mongo-init.js
class-management-main/tests/: conftest.py
class-management-main/tests/unit/: test_models.py  test_repository.py  test_services.py
